# YPLTUT

./: .gitignore  CMakeLists.txt  LICENSE  README.md  xmake.lua
example/: circle.cpp
include/MDrt/: config.hpp  event.hpp  exception.hpp  functions.hpp  gfx_context.hpp  keyboard.hpp  mouse.hpp  window.hpp
include/plat/: config.hpp  event.hpp  exception.hpp  functions.hpp  gfx_context.hpp  keyboard.hpp  mouse.hpp  window.hpp
include/pltut/: config.h  context.h  d3d11context.h  except.h  input_query.h  kminput.h  window.h
src/: context.cpp  event_impl.h  except.cpp  exception.cpp  functions.cpp  gfx_context.cpp  input_impl.cpp  kminput.cpp  window.cpp
src/linux/: gl3context.cpp  header.h  window.cpp
src/unix/: gl3context.h  glx.c  glx.h  window.h
src/win32/: d3d11context.cpp  gl3context.cpp  gl3context.h  wgl.c  wgl.h  window.cpp  window.h
test/: window_test.cpp
